Internet Software Infrasture Weekly works

--- a/weather/weather.html
+++ b/weather/weather.html
@@ -1,30 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Report</title>
-    <link rel="stylesheet" href="weather.css">
-</head>
-<body>
-    <div class="header">
-        <h1>WEATHER APP</h1>
-        <div>
-            <input type="text" name="" id="input" placeholder="Enter City Name">
-            <button id="Search" onclick="SeacrhByCity()">Search</button>
+    <link rel="stylesheet" href="weather.css" />
+  </head>
+  <body>
+    <header>
+      <h1>WEATHER APP</h1>
+      <div class="search-container">
+        <input type="text" name="" id="input" placeholder="Enter City Name" />
+        <button id="search" onclick="searchByCity()">Search</button>
+      </div>
+    </header>
+    <main>
+      <div class="weather">
+        <h2 id="city">North Hertfordshire</h2>
+        <div class="temperature-box">
+          <img src="logo.png" alt="logo" id="logo" />
+          <p id="temperature">29 &#8451;</p>
         </div>
-    </div>
-    <div class="Weather">
-        <h2 id="City">North Hertfordshire</h2>
-        <div class="temprature-box">
-            <img src="logo.png" alt="logo" id="logo">
-            <p id="temperature"> 29 °C</p>
-        </div>
-        <span id="clouds">Broken clouds</span>
+        <span id="clouds">Temprature</span>
+      </div>
+      <div class="forecast">
+        <p class="forecast-header">Upcoming forecast</p>
+        <div class="templist">
+          <div class="next">
+            <div>
+              <p class="time">8:30 PM</p>
+              <p>33 &#8451;</p>
             </div>
+            <p class="desc">Sunny</p>
+          </div>
+          <div class="next">
+            <div>
+              <p class="time">8:30 PM  </p>
+              <p>29 &#8451;</p>
+            </div>
+            <p class="desc">Light Rain</p>
+          </div>
+          <div class="next">
+            <div>
+              <p class="time">8:30 PM</p>
+              <p>15 &#8451;</p>
+            </div>
+            <p class="desc">Heavy Rain</p>
+          </div>
+          <div class="next">
+            <div>
+              <p class="time">8:30 PM</p>
+              <p>19 &#8451;</p>
+            </div>
+            <p class="desc">Storm</p>
+          </div>
+          <div class="next">
+            <div>
+              <p class="time">8:30 PM</p>
+              <p>32 &#8451;</p>
+            </div>
+            <p class="desc">Sunny</p>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="weather.js"></script>
-</body>
-</html>
-</body>
+  </body>
 </html>
