--- a/weather/AnushkaBhattarai_2330467.html
+++ b/weather/AnushkaBhattarai_2330467.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Report</title>
-    <link rel="stylesheet" href="weather.css" />
+    <link rel="stylesheet" href="AnushkaBhattarai_2330467.css" />
   </head>
   <body>
     <header>
@@ -17,10 +17,10 @@
     </header>
     <main>
       <div class="weather">
-        <h2 id="city">North Hertfordshire</h2>
+        <h2 id="city">City Name</h2>
         <div class="temperature-box">
           <img src="logo.png" alt="logo" id="logo" />
-          <p id="temperature">29 &#8451;</p>
+          <p id="temperature">Live Weather Data</p>
         </div>
         <span id="clouds">Temprature</span>
       </div>
@@ -29,42 +29,62 @@
         <div class="templist">
           <div class="next">
             <div>
-              <p class="time">8:30 PM</p>
+              <p class="time">6.45 PM</p>
               <p>33 &#8451;</p>
             </div>
-            <p class="desc">Sunny</p>
+            <p class="weatherr">Sunny</p>
           </div>
           <div class="next">
             <div>
-              <p class="time">8:30 PM  </p>
+              <p class="time">6.45 PM <br> Sunday</p>
               <p>29 &#8451;</p>
             </div>
-            <p class="desc">Light Rain</p>
+            <p class="weatherr">Light Rain</p>
           </div>
           <div class="next">
             <div>
-              <p class="time">8:30 PM</p>
+              <p class="time">6.45 PM <br> Monday </p>
               <p>15 &#8451;</p>
             </div>
-            <p class="desc">Heavy Rain</p>
+            <p class="weatherr">Heavy Rain</p>
           </div>
           <div class="next">
             <div>
-              <p class="time">8:30 PM</p>
+              <p class="time">6.45 PM <br> Tuesday</p>
               <p>19 &#8451;</p>
             </div>
-            <p class="desc">Storm</p>
+            <p class="weatherr">Storm</p>
           </div>
           <div class="next">
             <div>
-              <p class="time">8:30 PM</p>
+              <p class="time">6.45 PM <br> Wednesday</p>
               <p>32 &#8451;</p>
             </div>
             <p class="desc">Sunny</p>
           </div>
+          <div class="next">
+            <div>
+              <p class="time">6.45 PM <br> Thrusday</p>
+              <p>10 &#8451;</p>
+            </div>
+            <p class="desc">Cold</p>
         </div>
+        <div class="next">
+          <div>
+            <p class="time">6.45 PM <br> Friday</p>
+            <p>15 &#8451;</p>
+          </div>
+          <p class="desc">Cold</p>
+       </div>
+      <div class="next">
+        <div>
+          <p class="time">6.45 PM <br> Saturday</p>
+          <p>32 &#8451;</p>
+        </div>
+        <p class="desc">Sunny</p>
       </div>
+    </div>
     </main>
-    <script src="weather.js"></script>
+    <script src="AnushkaBhattarai_2330467.js"></script>
   </body>
 </html>
