practiced some javascript array excercises

--- a/practice/practice.html
+++ b/practice/practice.html
@@ -9,5 +9,8 @@
 <body>
     <script src="practice.js"></script>
     <script src="practice1.js"></script>
+    <script src="ch4.js"></script>
+    
+
 </body>
 </html>
