Did some few javascript practcie questions of array methods and for loops in array

--- a/practice/practice.html
+++ b/practice/practice.html
@@ -10,6 +10,7 @@
     <script src="practice.js"></script>
     <script src="practice1.js"></script>
     <script src="ch4.js"></script>
+    <script src="forlooparray.js"></script>
     
 
 </body>
