--- a/weather/AnushkaBhattarai_2330467.html
+++ b/weather/AnushkaBhattarai_2330467.html
@@ -22,7 +22,7 @@
           <img src="logo.png" alt="logo" id="logo" />
           <p id="temperature">Live Weather Data</p>
         </div>
-        <span id="clouds">Temprature</span>
+        <div id="time"></div>
       </div>
       <div class="forecast">
         <p class="forecast-header">Upcoming forecast</p>
